# RoboBuilderSim

./: CMakeLists.txt  README.md
data/blueprints/: chassis_blueprint.json  computer_blueprint.json  microcontroller_blueprint.json  motor_blueprint.json  robot.json  steel_blueprint.json  wheel_blueprint.json  wire_blueprint.json
data/resources/: chassis.json  coal.json  computer.json  copper.json  iron.json  microcontroller.json  motor.json  robot.json  rubber.json  silicon.json  steel.json  wheel.json  wire.json
include/blueprints/: blueprint.hpp
include/engine/: engine.hpp  simulation_worker.hpp
include/factories/: factory.hpp
include/ingredients/: ingredient.hpp  resource_types.hpp  silo.hpp
include/resource_collectors/: resource_collector.hpp
src/: main.cpp
src/engine/: engine.cpp  simulation_worker.cpp
src/factories/: factory.cpp
src/ingredients/: ingredient.cpp  silo.cpp
src/resource_collectors/: resource_collector.cpp
